--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY PROFILE</title>
+    <title> MY RESUME </title>
 </head>
 <body>
-    <h1> MY PROJECTS </h1>
-    <a href="../3.4 Birthday Invite Project/invite.html"><H4> birthday invitation project </H4></a>
-    <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invitation project preview">
-    <a href="../2.4 Movie Ranking Project/index.html" alt="movie ranking project preview">
+        <img src="./public/PicsArt_01-02-09.37.17.jpg" height="400">
+        <HR>
+        <h3>SUMMARY:</h3>
+            <p>myself B.Venkat sai vidhya sagar i am persuing btech 2nd year in srkr engineering college and this is my RESUME</p>
+        <hr>
+        <h4>EDUCATION:</h4>
+        <ul>
+            <li>Asian christian high school  (1st - 6th standard )</li>
+            <li>Sri chaitanya high school    (6th - 10th standard)</li>
+            <li>Sri chaitanya jr college (Intermediate)</li>
+            <Li>
+                Srkr engineering college (Btech)
+            </Li>
+        </ul>
+        <hr>
         <h4>
-            movie ranking project
+            WORK EXPERIENCE : 
         </h4>
-    </a>
-    <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview">
-    <hr>
-    <a href="https://www.loremipsumpress.com/contact.html">contact details</a>
+        <P>
+            worked on some mini projects
+        </P>
+        <hr>
+        <h4>
+            SKILLS :
+        </h4>
+        <p>
+            <ul>
+                <li>full stack</li>
+                <li>
+                    machine learning
+                </li>
+            </ul>
+        </p>
+        <hr>
+        <h4>ACHIEVEMENTS:</h4>
+        <p> 
+            <ul>
+                <li> participated in hackthon 2024 (srkr engineering college)</li>
+            </ul>
+        </p>
+        <HR>
+        <a href="./public/contact.html">contact me </a>
+        <br>
+        <footer>
+            © BVS . All rights reserved    
+        </footer>
 
-
-    
-</body>
+    </body>
 </html>
